...
                        <viewLayoutGuide key="safeArea" id="8Eu-eN-x7i"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Snapshot" id="f33-EM-cp4"/>
                    <connections>
                        <outlet property="cameraBaseView" destination="07Q-Ay-7LP" id="FmB-xQ-v26"/>
...
                        <viewLayoutGuide key="safeArea" id="4sk-mT-7Zt"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="hbH-VL-Gdd"/>
                    <connections>
                        <outlet property="tableView" destination="uuG-EW-I2g" id="sU1-ME-qjb"/>
...
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <state key="normal" title="Page1">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <state key="normal" title="Page2">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                    <constraint firstAttribute="height" constant="50" id="aLY-6h-Jzv"/>
                                </constraints>
                                <state key="normal" title="sign"/>
                                <connections>
                                    <action selector="onSignClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pRd-EV-YAn"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Signature" id="m1z-qa-cCX"/>
                    <connections>
                        <outlet property="signatureImageView" destination="rwN-q9-IqL" id="ba3-Tt-KPZ"/>
...
                                    <constraint firstAttribute="height" constant="50" id="quo-Rf-7d3"/>
                                </constraints>
                                <state key="normal" title="確認"/>
                                <connections>
                                    <action selector="onConfirnClicked:" destination="rRv-iX-KG6" eventType="touchUpInside" id="GBe-43-Pwc"/>
...
